Updated some docs
